--- a/pages/selfassessment.html
+++ b/pages/selfassessment.html
@@ -8,6 +8,6 @@
         <h1>Beyond the Pixel</h1>
         <pre>"Reality is becoming harder to define, Verifeye your knowledge by
 taking self-assessment to see if you are sharp  enough to spot the deepfakes."</pre>
-<img src="assets/images/assessment.png">
+        <img src="../assets/images/assessment.png">
     </body>    
-</html>
+</html> 
