Rename glossary.css to style.css and Create a connection between glossary and self assessment page.

--- a/pages/glossary.html
+++ b/pages/glossary.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VerifEye - Glossary</title>
     
-    <link rel="stylesheet" href="glossary.css">
+    <link rel="stylesheet" href="..\css\style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,8 +22,8 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Article</a></li>
-                <li><a href="#" class="active">Glossary</a></li>
-                <li><a href="#">Self-assessment</a></li>
+                <li><a href="http://127.0.0.1:5500/pages/glossary.html" class="active">Glossary</a></li>
+                <li><a href="http://127.0.0.1:5500/pages/selfassessment.html">Self-assessment</a></li>
             </ul>
         </nav>
     </header>
