--- a/pages/glossary.html
+++ b/pages/glossary.html
@@ -41,7 +41,29 @@
                 </svg>
                 <input type="text" placeholder="Search terminologies...">
             </div>
-        </div>
+
+            <div class="glossary-list">
+                <div class="glossary-item">
+                    <h3>Algorithm</h3>
+                    <p>Lorem Ipsum</p>
+                </div>
+                
+                <div class="glossary-item">
+                    <h3>Batch</h3>
+                    <p>Lorem Ipsum</p>
+                </div>
+
+                <div class="glossary-item">
+                    <h3>Classification</h3>
+                    <p>Lorem Ipsum</p>
+                </div>
+
+                <div class="glossary-item">
+                    <h3>Deepfake</h3>
+                    <p>Lorem Ipsum</p>
+                </div>
+            </div>
+            </div>
     </main>
 
     <footer>
