--- a/pages/glossary.html
+++ b/pages/glossary.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+git
     <header>
         <div class="logo-container">
             <img src="../assets/images/logo.png" alt="VerifEye Logo" class="logo">
