added forum page and add a forum link to other pages

--- a/pages/glossary.html
+++ b/pages/glossary.html
@@ -20,10 +20,11 @@ git
 
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Article</a></li>
-                <li><a href="http://127.0.0.1:5500/pages/glossary.html" class="active">Glossary</a></li>
-                <li><a href="http://127.0.0.1:5500/pages/selfassessment.html">Self-assessment</a></li>
+                <li><a href="../pages/homepage.html">Home</a></li>
+                <li><a href="../pages/article.html">Article</a></li>
+                <li><a href="../pages/glossary.html" class="active">Glossary</a></li>
+                <li><a href="../pages/selfassessment.html">Self-assessment</a></li>
+                <li><a href="../pages/forum.html">Discussions</a></li>
             </ul>
         </nav>
     </header>
