--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@100..900&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
     <section class="main">
         <nav>
             <div class="logo">
-                <img src="logoF.png" alt="VerifEye">
+                <img src="../assets/images/logo.png" alt="VerifEye">
                 <h2><div class="logoname">VerifEye</div></h2> 
             </div>
             <ul>
