--- a/pages/selfassessment.html
+++ b/pages/selfassessment.html
@@ -50,10 +50,11 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Article</a></li>
-            <li><a href="http://127.0.0.1:5500/pages/glossary.html">Glossary</a></li>
-            <li><a href="http://127.0.0.1:5500/pages/selfassessment.html" class="active">Self-assessment</a></li>
+            <li><a href="../pages/homepage.html">Home</a></li>
+            <li><a href="../pages/article.html">Article</a></li>
+            <li><a href="../pages/glossary.html">Glossary</a></li>
+            <li><a href="../pages/selfassessment.html" class="active">Self-assessment</a></li>
+            <li><a href="../pages/forum.html">Discussions</a></li>
         </ul>
     </nav>
 </header>
