--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VerifEye - Beyond The Pixels</title>
+    <title>VerifEye | Beyond The Pixels</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +24,7 @@
                 <li><a href="../pages/article.html">Article</a></li>
                 <li><a href="../pages/glossary.html">Glossary</a></li>
                 <li><a href="../pages/selfassessment.html">Self-assessment</a></li>
+                <li><a href="../pages/forum.html">Discussions</a></li>
             </ul>
             <button class="btn-login">Login</button>
             <script>
