--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -24,6 +24,7 @@
                 <li><a href="../pages/article.html">Article</a></li>
                 <li><a href="../pages/glossary.html">Glossary</a></li>
                 <li><a href="../pages/selfassessment.html">Self-assessment</a></li>
+                <li><a href="../pages/forum.html">Discussions</a></li>
             </ul>
             <button class="btn-login">Login</button>
             <script>
@@ -44,6 +45,5 @@
         </div>
     </section>
     
-
 </body>
 </html>
