fixed shifted margin

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -24,6 +24,7 @@
                 <li><a href="../pages/article.html">Article</a></li>
                 <li><a href="../pages/glossary.html">Glossary</a></li>
                 <li><a href="../pages/selfassessment.html">Self-assessment</a></li>
+                <li><a href="../pages/thread.html">Discussions</a></li>
             </ul>
             <button class="btn-login">Login</button>
             <script>
