--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -37,7 +37,7 @@
         <div class="hero-content">
             <h1>Beyond The Pixels</h1>
             <p>Verifeye the truth. From AI insight to deception detection, <br>we keep your eye on what's real.</p>
-            <a href="#" class="btn-read">Read articles <span>&rarr;</span></a>
+            <a href="../pages/article.html" class="btn-read">Read articles <span>&rarr;</span></a>
         </div>
 
         <div class="copyright">
