--- a/pages/Article.html
+++ b/pages/Article.html
@@ -116,11 +116,11 @@
             <div class="footer-col links-col">
                 <h3>Resources</h3>
                 <div class="link-grid">
-                    <a href="#">Article</a>
+                    <a href="../pages/article.html">Article</a>
                     <a href="#">Image Deepfakes</a>
-                    <a href="#">Glossary</a>
+                    <a href="../pages/glossary.html">Glossary</a>
                     <a href="#">Audio Deepfakes</a>
-                    <a href="#">Self-Assessment</a>
+                    <a href="../pages/selfassessment.html">Self-Assessment</a>
                     <a href="#">Video Deepfakes</a>
                 </div>
                 <p class="copyright">© VerifEye 2026. Fighting misinformation through education.</p>
