--- a/pages/glossary.html
+++ b/pages/glossary.html
@@ -82,16 +82,16 @@
             <div class="footer-col links-col">
                 <h3>Resources</h3>
                 <div class="link-grid">
-                    <a href="#">Article</a>
+                    <a href="../pages/article.html">Article</a>
                     <a href="#">Image Deepfakes</a>
-                    <a href="#">Glossary</a>
+                    <a href="../pages/glossary.html">Glossary</a>
                     <a href="#">Audio Deepfakes</a>
-                    <a href="#">Self-Assessment</a>
+                    <a href="../pages/selfassessment.html">Self-Assessment</a>
                     <a href="#">Video Deepfakes</a>
                 </div>
                 
             </div>
-
+3
             <div class="footer-col about-col">
                 <h3>About</h3>
                 <p>Our mission is to promote digital literacy and help users identify AI manipulated media.</p>
